--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="background_color">#FFDFF6FD</color>
+    <color name="background_color">#E2F3F8</color>
     <color name="interface_color">#B5C5F6</color>
     <color name="interface_color_clicked">#5A80F5</color>
     <color name="Dark_Blue">#000080</color>
