Info page done 5 5 23

--- a/app/src/main/res/layout/fragment_nav__bar.xml
+++ b/app/src/main/res/layout/fragment_nav__bar.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/Header_Fragment"
+    tools:context=".Nav_Bar"
     android:layout_width="match_parent"
     android:layout_height="70dp"
     android:orientation="horizontal"
-    android:background="@color/interface_color"
-    tools:context=".fragment_Nav_Bar"
     android:weightSum="3"
     android:layout_gravity="bottom"
     android:layout_marginBottom="0dp"> <!-- Ensure no bottom margin -->
@@ -17,21 +14,26 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:backgroundTint="@color/interface_color"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        >
 
         <LinearLayout
+            android:id="@+id/Weight_Layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:weightSum="2">
+            android:weightSum="2"
+            >
 
             <TextView
+                android:id="@+id/Weight_Text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Weight"
                 android:textColor="@color/black"
                 android:textSize="15sp"
-                android:textAlignment="center">
+                android:textAlignment="center"
+                >
 
             </TextView>
 
@@ -40,7 +42,8 @@
                 android:id="@+id/Weight_Image"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/scale" />
+                android:src="@drawable/scale"
+                />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
@@ -52,17 +55,21 @@
         android:layout_weight="1">
 
         <LinearLayout
+            android:id="@+id/Calorie_Layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
 
             <TextView
+                android:id="@+id/Calorie_Counter_Text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Calorie Counter"
                 android:textColor="@color/black"
                 android:textSize="15sp"
-                android:textAlignment="center">
+                android:textAlignment="center"
+                >
 
             </TextView>
 
@@ -70,7 +77,8 @@
                 android:id="@+id/Calorie_Counter_Image"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@drawable/calorie_counter_icon" />
+                android:src="@drawable/calorie_counter_icon"
+                />
 
         </LinearLayout>
 
@@ -81,28 +89,35 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:backgroundTint="@color/interface_color"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        >
 
         <LinearLayout
+            android:id="@+id/Info_Layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
 
             <TextView
+                android:id="@+id/Info_Text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Info"
                 android:textColor="@color/black"
                 android:textSize="15sp"
-                android:textAlignment="center">
+                android:textAlignment="center"
 
+                >
             </TextView>
 
             <ImageView
-                android:id="@+id/imageView5"
+                android:id="@+id/Info_Img"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@drawable/question_mark2" />
+                android:src="@drawable/question_mark2"
+
+                />
 
 
         </LinearLayout>
