--- a/app/src/main/res/layout/activity_calorie_homepage.xml
+++ b/app/src/main/res/layout/activity_calorie_homepage.xml
@@ -18,7 +18,7 @@
         android:layout_marginBottom="10dp"
         tools:layout_editor_absoluteX="145dp"
         tools:layout_editor_absoluteY="83dp"
-        android:layout_weight="1"/>
+        />
 
     <TextView
         android:id="@+id/Title_Label"
@@ -135,32 +135,7 @@
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
-                <androidx.cardview.widget.CardView
-                    android:layout_marginTop="20dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="150dp"
-                    android:background="@color/background_color"
-                    >
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        android:background="@color/panel_color"
-                        >
-
-                        <TextView
-                            android:id="@+id/Water_Label"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:text="Water:"
-                            android:textColor="@color/black"
-                            android:textAlignment="center"
-                            android:textSize="20sp">
-                        </TextView>
-
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
 
             </LinearLayout>
 
@@ -202,30 +177,6 @@
                     android:layout_marginTop="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="150dp"
-                    >
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        android:background="@color/panel_color">
-
-                        <TextView
-                            android:id="@+id/Snack_Label"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:text="Snack:"
-                            android:textColor="@color/black"
-                            android:textAlignment="center"
-                            android:textSize="20sp">
-                        </TextView>
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:layout_marginTop="20dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="150dp"
                     android:background="@color/panel_color"
                     >
 
@@ -257,13 +208,13 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView3"
-        android:name="com.example.caloriediary.fragment_Nav_Bar"
+        android:name="com.example.caloriediary.Nav_Bar"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         tools:layout="@layout/fragment_nav__bar"
         tools:layout_editor_absoluteX="145dp"
         tools:layout_editor_absoluteY="83dp"
-        android:layout_weight="1"
+
 
         >
     </androidx.fragment.app.FragmentContainerView>
