Bmr value calc correct. 15/5/24 18:58

--- a/app/src/main/res/layout/activity_enter_weight.xml
+++ b/app/src/main/res/layout/activity_enter_weight.xml
@@ -112,7 +112,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Stone"
-            android:backgroundTint="@color/interface_color_clicked"
+            android:backgroundTint="@color/interface_color"
             android:textColor="@color/black"
             android:onClick="Stone_Button_Pressed"
             android:layout_marginLeft="10dp"
@@ -141,7 +141,6 @@
         android:adjustViewBounds="true"
         app:srcCompat="@drawable/caloriecounter"
         android:padding="10dp"/>
-
 
 </LinearLayout>
 
