--- a/app/src/main/res/layout/fragment_nav__bar.xml
+++ b/app/src/main/res/layout/fragment_nav__bar.xml
@@ -59,6 +59,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
+            android:onClick="Calorie_Diary_Button_Pressed"
             >
 
             <TextView
@@ -118,8 +119,6 @@
                 android:src="@drawable/question_mark2"
 
                 />
-
-
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
