--- a/app/src/main/res/layout/activity_calorie_homepage.xml
+++ b/app/src/main/res/layout/activity_calorie_homepage.xml
@@ -1,24 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Enter_Weight"
-    android:background="@color/background_color"
-    android:orientation="vertical"
-    >
-`
+    tools:context=".Calorie_Homepage"
+    android:background="@color/background_color">
+
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView2"
-        android:name="com.example.caloriediary.fragment_title"
+        android:name="com.example.caloriediary.Fragments.fragment_title"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         tools:layout="@layout/fragment_title"
         android:layout_marginBottom="10dp"
-        tools:layout_editor_absoluteX="145dp"
-        tools:layout_editor_absoluteY="83dp"
-        />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
         android:id="@+id/Title_Label"
@@ -29,196 +27,214 @@
         android:textStyle="bold"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="10dp"
-        />
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:backgroundTint="@color/panel_color"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        >
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:onClick="Camera_Button_Pressed"
-            >
-
-            <ImageView
-                android:id="@+id/Camera_Image"
-                android:layout_width="match_parent"
-                android:layout_height="25sp"
-                android:layout_weight="1"
-                android:layout_gravity="left"
-                app:srcCompat="@drawable/dru3_3mpj_230118" />
-
-        </LinearLayout>
-
-
-
-
-    </androidx.cardview.widget.CardView>
+        app:layout_constraintTop_toBottomOf="@id/fragmentContainerView2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:id="@+id/scrollView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/Title_Label"
+        app:layout_constraintBottom_toTopOf="@id/fragmentContainerView3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <LinearLayout
-            android:id="@+id/Center_Top_Linear_Layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_margin="7dp"
-            android:weightSum="2"
-            android:layout_weight="1">
+            android:weightSum="2">
 
             <LinearLayout
-                android:id="@+id/Left_Linear_Layout"
+                android:id="@+id/Center_Top_Linear_Layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
+                android:orientation="horizontal"
                 android:layout_margin="7dp"
-                android:layout_weight="1">
+                android:weightSum="2">
 
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="150dp"
-                    android:background="@color/background_color"
-                    >
+                <LinearLayout
+                    android:id="@+id/Left_Linear_Layout"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_margin="7dp"
+                    android:layout_weight="1">
 
-                    <LinearLayout
+                    <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        android:background="@color/panel_color">
+                        android:layout_height="150dp"
+                        android:background="@color/background_color"
+                        android:onClick="Camera_Button_Pressed">
 
-                        <TextView
-                            android:id="@+id/Breakfast_Label"
+                        <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:text="Breakfast:"
-                            android:textColor="@color/black"
-                            android:textAlignment="center"
-                            android:textSize="20sp">
-                        </TextView>
-                    </LinearLayout>
+                            android:orientation="vertical"
+                            android:background="@color/panel_color">
 
-                </androidx.cardview.widget.CardView>
+                            <TextView
+                                android:id="@+id/Image_Label"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="Log Food By Image:"
+                                android:textColor="@color/black"
+                                android:textAlignment="center"
+                                android:textSize="20sp"/>
 
-                <androidx.cardview.widget.CardView
-                    android:layout_marginTop="20dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="150dp"
-                    android:background="@color/background_color"
-                    >
+                            <ImageView
+                                android:id="@+id/imageView4"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                app:srcCompat="@drawable/dru3_3mpj_230118"
+                                android:layout_margin="20dp"/>
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
 
-                    <LinearLayout
+                    <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        android:background="@color/panel_color">
+                        android:layout_height="150dp"
+                        android:background="@color/background_color"
+                        android:layout_marginTop="20dp">
 
-                        <TextView
-                            android:id="@+id/Dinner_Label"
+                        <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:text="Dinner:"
-                            android:textColor="@color/black"
-                            android:textAlignment="center"
-                            android:textSize="20sp">
-                        </TextView>
+                            android:orientation="vertical"
+                            android:background="@color/panel_color">
 
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
+                            <TextView
+                                android:id="@+id/Breakfast_Label"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:text="Breakfast:"
+                                android:textColor="@color/black"
+                                android:textAlignment="center"
+                                android:textSize="20sp"/>
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
 
+                    <androidx.cardview.widget.CardView
+                        android:layout_marginTop="20dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="150dp"
+                        android:background="@color/background_color">
 
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical"
+                            android:background="@color/panel_color">
 
+                            <TextView
+                                android:id="@+id/Dinner_Label"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:text="Dinner:"
+                                android:textColor="@color/black"
+                                android:textAlignment="center"
+                                android:textSize="20sp"/>
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/Right_Linear_Layout"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_margin="7dp"
+                    android:layout_weight="1">
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="150dp"
+                        android:background="@color/background_color">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical"
+                            android:background="@color/panel_color"
+                            android:onClick="Search_Button_Pressed">
+
+                            <TextView
+                                android:id="@+id/text_Label"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="Log Food By Text Search:"
+                                android:textColor="@color/black"
+                                android:textAlignment="center"
+                                android:textSize="20sp"/>
+
+                            <ImageView
+                                android:id="@+id/imageView6"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                app:srcCompat="@drawable/search_pic2"/>
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="150dp"
+                        android:layout_marginTop="20dp">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical"
+                            android:background="@color/panel_color">
+
+                            <TextView
+                                android:id="@+id/Lunch_Label"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:text="Lunch:"
+                                android:textColor="@color/black"
+                                android:textAlignment="center"
+                                android:textSize="20sp"/>
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_marginTop="20dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="150dp"
+                        android:background="@color/panel_color">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical"
+                            android:background="@color/panel_color">
+
+                            <TextView
+                                android:id="@+id/Exercise_Label"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="Exercise:"
+                                android:textColor="@color/black"
+                                android:textAlignment="center"
+                                android:textSize="20sp"/>
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
+                </LinearLayout>
             </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/Right_Linear_Layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_margin="7dp"
-                android:layout_weight="1">
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="150dp"
-
-                    >
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        android:background="@color/panel_color">
-
-                        <TextView
-                            android:id="@+id/Lunch_Label"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:text="Lunch:"
-                            android:textColor="@color/black"
-                            android:textAlignment="center"
-                            android:textSize="20sp">
-                        </TextView>
-
-
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:layout_marginTop="20dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="150dp"
-                    android:background="@color/panel_color"
-                    >
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        android:background="@color/panel_color">
-
-                        <TextView
-                            android:id="@+id/Exercise_Label"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Exercise:"
-                            android:textColor="@color/black"
-                            android:textAlignment="center"
-                            android:textSize="20sp"
-                            >
-                        </TextView>
-
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-
-            </LinearLayout>
-
         </LinearLayout>
-
     </ScrollView>
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView3"
-        android:name="com.example.caloriediary.Nav_Bar"
+        android:name="com.example.caloriediary.Fragments.Nav_Bar"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         tools:layout="@layout/fragment_nav__bar"
-        tools:layout_editor_absoluteX="145dp"
-        tools:layout_editor_absoluteY="83dp"
-
-
-        >
-    </androidx.fragment.app.FragmentContainerView>
-
-
-</LinearLayout>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
