--- a/app/src/main/res/layout/fragment_nav__bar.xml
+++ b/app/src/main/res/layout/fragment_nav__bar.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".Nav_Bar"
+    tools:context=".Fragments.Nav_Bar"
     android:layout_width="match_parent"
     android:layout_height="70dp"
     android:orientation="horizontal"
