--- a/app/src/main/res/layout/fragment_title.xml
+++ b/app/src/main/res/layout/fragment_title.xml
@@ -6,7 +6,7 @@
     android:layout_height="50dp"
     android:orientation="horizontal"
     android:background="@color/interface_color"
-    tools:context=".fragment_title"
+    tools:context=".Fragments.fragment_title"
     android:padding="5dp"
     android:weightSum="3">
 
