--- a/app/src/main/res/layout/activity_calorie_homepage.xml
+++ b/app/src/main/res/layout/activity_calorie_homepage.xml
@@ -33,11 +33,26 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
+    <TextView
+        android:id="@+id/Credits_Lb"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/API_Credits"
+        android:textSize="15sp"
+        android:layout_margin="8dp"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintTop_toBottomOf="@id/Title_Label"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
     <ScrollView
         android:id="@+id/scrollView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/Title_Label"
+        app:layout_constraintTop_toBottomOf="@id/Credits_Lb"
         app:layout_constraintBottom_toTopOf="@id/fragmentContainerView3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
