--- a/app/src/main/res/layout/activity_coming_soon.xml
+++ b/app/src/main/res/layout/activity_coming_soon.xml
@@ -12,6 +12,16 @@
 
     >
 
+    <LinearLayout
+        android:id="@+id/Extra_Layer"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+    </LinearLayout>
+
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/title_fragment"
@@ -42,7 +52,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
-        android:text="This feature is corrently unavailable. Please try again at a future date."
+        android:text="This feature is currently unavailable. Please try again at a future date."
         android:textSize="20sp"
         android:layout_margin="10dp"
         >
