--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -135,6 +135,41 @@
     </LinearLayout>
 
 
+    <LinearLayout
+        android:id="@+id/Image_Layout3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_margin="7dp"
+
+        >
+
+        <TextView
+            android:id="@+id/Image3_Textview_Title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:text="API Camera  :"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:layout_marginRight="15dp"
+            >
+        </TextView>
+
+        <TextView
+            android:id="@+id/Image3_Textview_Data"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text= "@string/API_Credits"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            >
+        </TextView>
+
+    </LinearLayout>
+
+
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="wrap_content"
