--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -153,6 +153,24 @@
         />
 
 
+    <Button
+        android:id="@+id/Gallery_Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Open Gallery"
+        android:onClick="Call_Gallery"
+        tools:layout_editor_absoluteX="148dp"
+        tools:layout_editor_absoluteY="476dp"
+        app:layout_constraintTop_toBottomOf="@id/Camera_Button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:backgroundTint="@color/interface_color"
+        android:textColor="@color/black"
+        android:textSize="15sp"
+        />
+
+
+
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView3"
