--- a/app/src/main/res/layout/fragment_nav__bar.xml
+++ b/app/src/main/res/layout/fragment_nav__bar.xml
@@ -7,7 +7,8 @@
     android:orientation="horizontal"
     android:weightSum="3"
     android:layout_gravity="bottom"
-    android:layout_marginBottom="0dp"> <!-- Ensure no bottom margin -->
+    android:layout_marginBottom="0dp"
+    >
 
     <androidx.cardview.widget.CardView
         android:id="@+id/Weight_Section_Card"
