--- a/app/src/main/res/layout/activity_option_for_bmi.xml
+++ b/app/src/main/res/layout/activity_option_for_bmi.xml
@@ -12,6 +12,7 @@
     >
 
     <androidx.fragment.app.FragmentContainerView
+        android:layout_marginTop="30dp"
         android:id="@+id/fragmentContainerView2"
         android:name="com.example.caloriediary.Fragments.fragment_title"
         android:layout_width="match_parent"
