before db changes for food

--- a/app/src/main/res/layout/activity_option_for_bmi.xml
+++ b/app/src/main/res/layout/activity_option_for_bmi.xml
@@ -41,8 +41,8 @@
         android:id="@+id/Title2_Label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Re-enter your weight and Height?:"
-        android:textSize="22sp"
+        android:text="Do you want to Re-enter your Weight and Height?:"
+        android:textSize="19sp"
         android:textStyle="bold"
         android:textAlignment="center"
         android:textColor="@color/black"
